running the app  in service

--- a/web-worker-demo.html
+++ b/web-worker-demo.html
@@ -41,12 +41,12 @@
 				<app>
 					loading web worker...
 				</app>
-				<input class="form-control" placeholder="specify n" type="number" id="factorial" />
+				<!--<input class="form-control" placeholder="specify n" type="number" id="factorial" />
 				<br/>
 				<button class="btn btn-primary" type="button" id="calculate_factorial">Calculate Factorial</button>
 				<br/><br/>
 				<div>The calculated factorial is:</div>
-				<div id="result"></div>
+				<div id="result"></div>-->
 
 
 			</div>
