--- a/factorial/web-worker-app.html
+++ b/factorial/web-worker-app.html
@@ -1,8 +1,9 @@
 <div>Web worker loaded</div>
-<input class="form-control" [(ngModel)]="val"  type="number" />
+<input class="form-control" [(ngModel)]="val" type="number" />
 <br/>
 <button class="btn btn-primary" type="button" (click)="calculate_factorial($event)" id="calculate_factorial">Calculate Factorial</button>
-<button>text</button>
+<button class="btn btn-primary" type="button" (click)="calculate_factorial2($event)" id="calculate_factorial2">Calculate Factorial 2</button>
+
 <br/><br/>
 <div>The calculated factorial is:</div>
 <div id="result"></div>
